--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -317,8 +317,9 @@ For more information about the monitoring formulas, see xref:specialized-guides:
 
 === Change Grafana Password
 
-To change Grafana password please follow the steps described in upstream documentation.
-https://grafana.com/docs/grafana/latest/administration/user-management/user-preferences/#change-your-grafana-password
+To change the Grafana password follow the steps described in the Grafana documentation:
+
+* https://grafana.com/docs/grafana/latest/administration/user-management/user-preferences/#change-your-grafana-password
 
 In case you have lost admin password you can reset it using following command:
 ----
