--- a/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
@@ -20,11 +20,13 @@ For more information about using monitoring, see xref:administration:monitoring.
 .Procedure: Configuring the Grafana Formula
 . Navigate to the menu:Formulas[Grafana] tab, and set these parameters in the [guimenu]``Grafana`` section:
 * Check the [guimenu]``Enabled`` box to enable Grafana visualizations.
++
 [NOTE]
 ====
-``Initial admin password`` is used on the first run only and Grafana UI prompts to change it.
-This field cannot be used to change admin password. For information on how to change the password please check
-xref:administration:pages/monitoring.adoc[]
+[guimenu]``Initial admin password`` is used on the first run only, and Grafana UI prompts to change it.
+This field cannot be used to change the Grafana password.
+For more information on how to change the password, see
+xref:administration:pages/monitoring.adoc[].
 ====
 . For each Prometheus data source you want to use, in the menu:Datasources[Prometheus] section, click btn:[+], and set these parameters:
 * In the [guimenu]``Datasource name`` field, type a name to identify the data source.
