Adding unused files to nav bar.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -72,6 +72,7 @@ endif::[]
 *** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
 *** xref:tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
 *** xref:tshoot-mail.adoc[Troubleshooting Mail Configuration]
+*** xref:tshoot-mounting-vartmp-with-noexec.adoc[Troubleshooting Mounting /var/tmp with noexec]
 *** xref:tshoot-not-enough-disk-space.adoc[Troubleshooting Not Enough Disk Space]
 *** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
 *** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
