Adding more unused files to nav bar.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -78,7 +78,10 @@ endif::[]
 *** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
 *** xref:tshoot-packages.adoc[Troubleshooting Packages]
 *** xref:tshoot-packages-proxy.adoc[Troubleshooting Proxy Cache Repository]
+*** xref:tshoot-passing-grains-to-start-event.adoc[Troubleshooting Passing Grains to a Start Event]
+*** xref:tshoot-proxy-connections-and-fqdns.adoc[Troubleshooting Proxy Connections and FQDN]
 *** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
+*** xref:tshoot-reg-from-webui-fails-no-errors.adoc[Troubleshooting Registration from {webui} fails and does not show any errors]
 *** xref:tshoot-register-trad-as-salt-after-deletion.adoc[Registering traditional client as Salt minion after deleting it]
 *** xref:tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
 *** xref:tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
