--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -84,9 +84,11 @@ endif::[]
 *** xref:tshoot-reg-from-webui-fails-no-errors.adoc[Troubleshooting Registration from {webui} fails and does not show any errors]
 *** xref:tshoot-register-trad-as-salt-after-deletion.adoc[Registering traditional client as Salt minion after deleting it]
 *** xref:tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
+*** xref:tshoot-rh-cdn-channel-and-multiple-certs.adoc[Troubleshooting Red Hat CDN Channel and Multiple Certificates]
 *** xref:tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
 *** xref:tshoot-retrying-setup-target-system.adoc[Retrying to Set up the Target System]
 *** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
+*** xref:tshoot-salt-clients-down-and-dns.adoc[Troubleshooting Salt clients shown as down and DNS settings]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 *** xref:tshoot-schema-upgrade-fails.adoc[Schema Upgrade Fails]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
