Add maximum_object_size Squid configuration option in the Tuning   Guide (bsc#1204011) https://github.com/SUSE/spacewalk/issues/19179

--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -576,6 +576,28 @@ If you see lines containing ``LOG:  temporary file:`` try raising this parameter
 |===
 
 
+Since some of these Branches are really far away from the main SUSE Manager installation, we have to use the Proxies to cache packages and send to their clients.
+We found out though that there were some packages that took too long to be downloaded, sometimes even receiving timeouts.
+Basically, your base squid configuration set this value:
+maximum_object_size = 200 MB
+The issue is that there are many RPMs (like kernel-firmware-*.noarch.rpm) that are bigger than 200MB, and have to be downloaded fully remotely.
+I suggest you to raise the base value of this parameter to 300 MB, so that this won't happen to other people.
+
+[[maximum_object_size]]
+=== `Squid's maximum_object_size`
+
+[cols="1,1"]
+|===
+| Description          | The default value for max-size parameter on any cache_dir.
+| Tune when            | downloading large packages take too long.
+| Value default        | 200 MB
+| Value recommendation | 300 MB
+| Location             | [path]``squid.conf``
+| Example              | `maximum_object_size = 300MB`
+| More information     | http://www.squid-cache.org/Doc/config/maximum_object_size/
+|===
+
+
 
 [[swappiness]]
 === `swappiness`
