--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -321,7 +321,7 @@ To change the Grafana password follow the steps described in the Grafana documen
 
 * https://grafana.com/docs/grafana/latest/administration/user-management/user-preferences/#change-your-grafana-password
 
-In case you have lost admin password you can reset it using following command:
+In case you have lost the Grafana administrator password you can reset it as [literal]``root`` with the following command:
 ----
 grafana-cli --configOverrides cfg:default.paths.data=/var/lib/grafana --homepath /usr/share/grafana admin reset-admin-password <new_password>
 ----
