Fixing xrefs for former Client Config troubleshooting.

--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -61,7 +61,7 @@ When using WebUI to add Ubuntu 18.04 channels, you also need to add ubuntu-1804-
 ====
 {ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -83,7 +83,7 @@ The channels you need for this procedure are:
 ====
 {ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 endif::[]
@@ -94,7 +94,7 @@ ifeval::[{suma-content} == true]
 ====
 {ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -160,7 +160,7 @@ The channels you need for this procedure are:
 ====
 {ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
