--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -315,6 +315,17 @@ Monitoring formulas can also be configured for System Groups, by applying the sa
 For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
 
 
+=== Change Grafana Password
+
+To change the Grafana password follow the steps described in the Grafana documentation:
+
+* https://grafana.com/docs/grafana/latest/administration/user-management/user-preferences/#change-your-grafana-password
+
+In case you have lost the Grafana administrator password you can reset it as [literal]``root`` with the following command:
+----
+grafana-cli --configOverrides cfg:default.paths.data=/var/lib/grafana --homepath /usr/share/grafana admin reset-admin-password <new_password>
+----
+
 
 == Network Boundaries
 
