Fixed pdf nav bar.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -77,8 +77,8 @@ endif::[]
 *** xref:tshoot-not-enough-disk-space.adoc[Troubleshooting Not Enough Disk Space]
 *** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
 *** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
-*** xref:tshoot-packages.adoc[Troubleshooting Packages]
-*** xref:tshoot-packages-proxy.adoc[Troubleshooting Proxy Cache Repository]
+*** xref:tshoot-packages.adoc[Troubleshooting Package Inconsistencies]
+*** xref:tshoot-packages-proxy.adoc[Troubleshooting Repository Via Proxy Issues]
 *** xref:tshoot-passing-grains-to-start-event.adoc[Troubleshooting Passing Grains to a Start Event]
 *** xref:tshoot-proxy-connections-and-fqdns.adoc[Troubleshooting Proxy Connections and FQDN]
 *** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
