--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -47,6 +47,7 @@ This procedure does not manipulate the original client, which remains registered
 ----
 # rm /etc/machine-id
 # rm /var/lib/dbus/machine-id
+# rm /var/lib/zypp/AnonymousUniqueId
 # dbus-uuidgen --ensure
 # systemd-machine-id-setup
 ----
@@ -55,12 +56,22 @@ This procedure does not manipulate the original client, which remains registered
 +
 ----
 # rm /var/lib/dbus/machine-id
+# rm /var/lib/zypp/AnonymousUniqueId
 # dbus-uuidgen --ensure
 ----
-. If your clients still have the same Salt client ID, delete the [path]``minion_id`` file on each client (FQDN is used when it is regenerated on client restart):
+. If your clients still have the same Salt client ID, delete the [path]``minion_id`` file on each client (FQDN is used when it is regenerated on client restart).
+  For Salt Minion clients:
 +
 ----
 # rm /etc/salt/minion_id
+# rm -rf /etc/salt/pki
+----
++
+  For Salt Bundle clients:
++
+----
+# rm /etc/venv-salt-minion/minion_id
+# rm -rf /etc/venv-salt-minion/pki
 ----
 . Delete accepted keys from the onboarding page and the system profile from {productname}, and restart the client with:
 +
