--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -66,7 +66,7 @@ endif::[]
 *** xref:tshoot-disabling-fqdns-grain.adoc[Troubleshooting Disabling the FQDNS grain]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:tshoot-firewalls.adoc[Troubleshooting Firewalls]
-*** xref:tshoot-highsynctimesoverwan.adoc[Troubleshooting high sync times over WAN]
+*** xref:tshoot-highsynctimesoverwan.adoc[Troubleshooting High Sync Times Over WAN]
 *** xref:tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
 *** xref:tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
 *** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
@@ -83,15 +83,15 @@ endif::[]
 *** xref:tshoot-proxy-connections-and-fqdns.adoc[Troubleshooting Proxy Connections and FQDN]
 *** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
 *** xref:tshoot-reg-from-webui-fails-no-errors.adoc[Troubleshooting Registration from {webui} fails and does not show any errors]
-*** xref:tshoot-register-trad-as-salt-after-deletion.adoc[Registering traditional client as Salt minion after deleting it]
+*** xref:tshoot-register-trad-as-salt-after-deletion.adoc[Troubleshooting Registering Traditional Client as Salt minion After Deleting]
 *** xref:tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
 *** xref:tshoot-rh-cdn-channel-and-multiple-certs.adoc[Troubleshooting Red Hat CDN Channel and Multiple Certificates]
 *** xref:tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
-*** xref:tshoot-retrying-setup-target-system.adoc[Retrying to Set up the Target System]
+*** xref:tshoot-retrying-setup-target-system.adoc[Troubleshooting Retrying to Set Up the Target System]
 *** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
-*** xref:tshoot-salt-clients-down-and-dns.adoc[Troubleshooting Salt clients shown as down and DNS settings]
+*** xref:tshoot-salt-clients-down-and-dns.adoc[Troubleshooting Salt Clients Shown as Down and DNS Settings]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
-*** xref:tshoot-schema-upgrade-fails.adoc[Schema Upgrade Fails]
+*** xref:tshoot-schema-upgrade-fails.adoc[Troubleshooting Schema Upgrade Fails]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
 *** xref:tshoot-webui-fails-load.adoc[The Web UI Fails to Load]
