New troubleshooting files location and fixed links.

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -70,7 +70,7 @@ Disabling the GPG check is a security risk if packages are from an untrusted sou
 [NOTE]
 ====
 If you are registering traditional {rhel}{nbsp}7 or SLES {es}{nbsp}7 clients you might notice errors with unsigned packages.
-For more information, see xref:administration:tshoot-registertradrhel.adoc[].
+For more information, see xref:administration:troubleshooting/tshoot-registertradrhel.adoc[].
 ====
 
 
