--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -30,8 +30,7 @@ gpg --list-keys
 GPGPASS="password"
 ----
 
-For renewing a GPG key, see xref:administration:tshoot-sync.adoc[].
-
+For renewing a GPG key, see xref:administration:troubleshooting/tshoot-sync.adoc[].
 
 
 You can manage metadata signing on the command line using the [command]``mgr-sign-metadata-ctl`` command.
@@ -88,4 +87,4 @@ This means that all clients connected to the server need to trust the new  GPG k
 . Apply the highstate with the {productname} {webui}.
 
 
-For more information about troubleshooting GPG keys, see xref:administration:tshoot-sync.adoc[].
+For more information about troubleshooting GPG keys, see xref:administration:troubleshooting/tshoot-sync.adoc[].
