--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -95,7 +95,7 @@ When the bootstrap process has completed successfully, your client is listed at 
 * For Salt clients and even more control over the process, executing single commands on the command line can be useful.
   For more information, see xref:client-configuration:registration-cli.adoc[].
 * When registering clients launched from a public cloud image (for example, AWS AMI), you need to do some additional configuration to prevent them from over-writing each other.
-  For more information about registering clones, see xref:administration:tshoot-registerclones.adoc[].
+  For more information about registering clones, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
 
 
 
