--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -169,4 +169,4 @@ In most cases, allowing access to these URLs is sufficient:
 If you are using non-{suse} clients you might also need to allow access to other servers that provide specific packages for those operating systems.
 For example, if you have {ubuntu} clients, you will need to be able to access the {ubuntu} server.
 
-For more information about troubleshooting firewall access for non-{suse} clients, see xref:administration:tshoot-firewalls.adoc[].
+For more information about troubleshooting firewall access for non-{suse} clients, see xref:administration:troubleshooting/tshoot-firewalls.adoc[].
