--- a/modules/reference/pages/systems/systems-list.adoc
+++ b/modules/reference/pages/systems/systems-list.adoc
@@ -84,7 +84,7 @@ The menu:Systems[System List > Inactive] section lists every client that has not
 
 For more information about client connections to the server, see xref:client-configuration:contact-methods-intro.adoc[].
 
-For more information on troubleshooting inactive clients, see xref:administration:tshoot-inactiveclients.adoc[].
+For more information on troubleshooting inactive clients, see xref:administration:troubleshooting/tshoot-inactiveclients.adoc[].
 
 
 
