added xref for backups to install and upgrade

--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -18,6 +18,8 @@ By default, several update repositories are configured and enabled for the {prod
 New and updated packages become available automatically.
 
 It is recommended you make a backup of the server before upgrading.
+For more information on backing up {productname}, see xref:administration:backup-restore.adoc[].
+
 
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
