--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -187,7 +187,7 @@ The products you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -235,7 +235,7 @@ The channels you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -344,7 +344,7 @@ The channels you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/manual_channels.adoc[]
@@ -421,5 +421,5 @@ For more information on registering your clients, see xref:client-configuration:
 [WARNING]
 ====
 To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information, see ``Registering Older Clients`` at xref:administration:tshoot-intro.adoc[Troubleshooting].
+For more information, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
 ====
