New troubleshooting files location and fixed links (#1821)
* New troubleshooting files location and fixed links.

* Deleted duplicate files.

* update cfg files for new troubleshooting changes

* Fixed broken links.

* Removed swp files.

* Xref fix.

Co-authored-by: Joseph cayouette <jcayouette@suse.com>

--- a/modules/administration/pages/troubleshooting/tshoot-inactiveclients.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-inactiveclients.adoc
@@ -40,4 +40,4 @@ For more information about client connections to the server, see xref:client-con
 
 For more information about configuring ports, see xref:installation-and-upgrade:ports.adoc[].
 
-For more information about troubleshooting firewalls, see xref:administration:tshoot-firewalls.adoc[].
+For more information about troubleshooting firewalls, see xref:administration:troubleshooting/tshoot-firewalls.adoc[].
