added xref for backups to install and upgrade (#1824)
* added xref for backups to install and upgrade
* Update modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -17,6 +17,7 @@ https://www.uyuni-project.org/pages/stable-version.html.
 ====
 You will not be able to fix issues that arise during the migration.
 Ensure you have created a backup before you start the migration.
+For more information about backing up {productname}, see xref:administration:backup-restore.adoc[].
 If you are running {productname} Server on a virtual machine, we recommend that you create a snapshot before you start.
 ====
 
