Add list of server metrics

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -271,6 +271,44 @@ Metrics for a proxy are not automatically collected by Prometheus.
 To enable self-health monitoring on a proxy, you need to manually install exporters and enable them.
 ====
 
+Following relevant metrics are collected on the {productname} Server.
+
+.PostgreSQL exporter
+|===
+|Metric |Type | Description
+
+|pg_stat_database_tup_fetched
+|counter
+|Number of rows fetched by queries
+
+|pg_stat_database_tup_inserted
+|counter
+|Number of rows inserted by queries
+
+|pg_stat_database_tup_updated
+|counter
+|Number of rows updated by queries
+
+|pg_stat_database_tup_deleted
+|counter
+|Number of rows deleted by queries
+
+|mgr_serveractions_completed
+|gauge
+|Number of completed actions
+
+|mgr_serveractions_failed
+|gauge
+|Number of failed actions
+
+|mgr_serveractions_picked_up
+|gauge
+|Number of picked-up actions
+
+|mgr_serveractions_queued
+|gauge
+|Number of queued actions
+|===
 
 
 === Monitoring Managed Systems
