Add remaining server metrics

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -273,7 +273,8 @@ To enable self-health monitoring on a proxy, you need to manually install export
 
 Following relevant metrics are collected on the {productname} Server.
 
-.PostgreSQL exporter
+.PostgreSQL exporter (port 9187)
+[cols="45,10,45"]
 |===
 |Metric |Type | Description
 
@@ -308,6 +309,60 @@ Following relevant metrics are collected on the {productname} Server.
 |mgr_serveractions_queued
 |gauge
 |Number of queued actions
+|===
+
+.JMX exporter (Tomcat port 5556, Taskomatic port 5557)
+[cols="45,10,45"]
+|===
+|Metric |Type | Description
+
+|java_lang_Threading_ThreadCount
+|gauge
+|Number of active threads
+
+|java_lang_Memory_HeapMemoryUsage_used
+|gauge
+|Current Heap memory usage
+|===
+
+.Server Message Queue (port 80)
+[cols="45,10,45"]
+|===
+|Metric |Type | Description
+
+|message_queue_thread_pool_threads
+|counter
+|Number of message queue threads ever created
+
+|message_queue_thread_pool_threads_active
+|gauge
+|Number of currently active message queue threads
+
+|message_queue_thread_pool_task_count
+|counter
+|Number of tasks ever submitted
+
+|message_queue_thread_pool_completed_task_count
+|counter
+|Number of tasks ever completed
+|===
+
+.Taskomatic Scheduler (port 9800)
+[cols="45,10,45"]
+|===
+|Metric |Type | Description
+
+|taskomatic_scheduler_threads
+|counter
+|Number of scheduler threads ever created
+
+|taskomatic_scheduler_threads_active
+|gauge
+|Number of currently active scheduler threads
+
+|taskomatic_scheduler_completed_task_count
+|counter
+|Number of tasks ever completed
 |===
 
 
