When using SMT, product_tree.json needs to be synced manual

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -111,6 +111,7 @@ smt-sync --createdbreplacementfile /tmp/dbrepl.xml
 smt-sync --todir /mnt/usb
 smt-mirror --dbreplfile /tmp/dbrepl.xml --directory /mnt/usb \
            --fromlocalsmt -L /var/log/smt/smt-mirror-export.log
+curl https://scc.suse.com/suma/product_tree.json -o /mnt/usb/product_tree.json
 ----
 
 
