--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -6,6 +6,7 @@ Because {productname} relies on a database as well as the installed program and 
 This chapter contains information on the files you need to back up, and introduces the [command]``smdba`` tool to manage database backups.
 It also contains information about restoring from your backups in the case of a system failure.
 
+
 [IMPORTANT]
 ====
 Regardless of the backup method you use, you must have available at least three times the amount of space your current installation uses.
@@ -101,6 +102,8 @@ mgr-sync refresh --refresh-channels
 The [command]``smdba`` tool is used for managing a local PostgreSQL database.
 It allows you to back up and restore your database, and manage backups.
 It can also be used to check the status of your database, and perform administration tasks, such as restarting.
+For more information about the [command]``smdba``  tool, see xref:reference:cli-smdba[].
+
 
 The [command]``smdba`` tool works with local PostgreSQL databases only, it does not work with remotely accessed databases, or Oracle databases.
 
