Apply suggestions from code review
* extend changelog description
* fix typo

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -322,7 +322,7 @@ Following relevant metrics are collected on the {productname} Server.
 
 |java_lang_Memory_HeapMemoryUsage_used
 |gauge
-|Current Heap memory usage
+|Current heap memory usage
 |===
 
 .Server Message Queue (port 80)
