Revert "Backport43. Removed SLE 11 from the list of supported clients."
This reverts commit 7849e38ccd3ad9529517660d33fe81513af64d80.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -57,6 +57,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
+| {check}
+| {check}
+
 | {sles} for SAP 15
 | {x86_64}, {ppc64le}
 | {check}
@@ -169,6 +174,11 @@ ifeval::[{uyuni-content} == true]
 
 | {sle} 12
 | {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
 | {check}
 | {check}
 
