--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -42,6 +42,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
+| {check}
+| {check}
+
 | {sles} for SAP 15
 | {x86_64}, {ppc64le}
 | {check}
@@ -159,6 +164,11 @@ ifeval::[{uyuni-content} == true]
 
 | {sle} 12
 | {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
 | {check}
 | {check}
 
