--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -7,8 +7,8 @@ This section contains information about registering Salt clients running {ubuntu
 Traditional clients are not supported.
 
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
+{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
+For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
 
 Bootstrapping is supported for starting {ubuntu} clients and performing initial state runs such as setting repositories and performing profile updates.
