--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -4,8 +4,8 @@
 This section contains information about registering Salt clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
+{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
+For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
 
 [IMPORTANT]
