--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -157,6 +157,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {ubuntu} 22.04
+| {x86_64}
+| {cross}
+| {check}
+
 | {ubuntu} 20.04
 | {x86_64}
 | {cross}
@@ -299,6 +304,11 @@ ifeval::[{uyuni-content} == true]
 
 | {rocky} 8
 | {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 22.04
+| {x86_64}
 | {cross}
 | {check}
 
