--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -128,6 +128,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {ubuntu} 22.04
+| {x86_64}
+| {cross}
+| {check}
+
 | {ubuntu} 20.04
 | {x86_64}
 | {cross}
@@ -260,6 +265,11 @@ ifeval::[{uyuni-content} == true]
 
 | {rocky} 8
 | {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 22.04
+| {x86_64}
 | {cross}
 | {check}
 
