Add missing Ubuntu22 content.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -142,6 +142,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {ubuntu} 22.04
+| {x86_64}
+| {cross}
+| {check}
+
 | {ubuntu} 20.04
 | {x86_64}
 | {cross}
@@ -265,6 +270,11 @@ ifeval::[{uyuni-content} == true]
 
 | {rocky} 8
 | {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 22.04
+| {x86_64}
 | {cross}
 | {check}
 
