Remove leftover CentOS 6 references.

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -39,17 +39,16 @@ For example, when working with `x86_64` architecture, you need this products:
 |===
 
 | OS Version | Product Name
-| {centos} 6 | CentOS 6 x86_64
 | {centos} 7 | CentOS 7 x86_64
 
 |===
 
-[NOTE]
-====
-{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {centos} 6 clients using these packages will fail.
+//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -62,17 +61,16 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {centos} 6 | centos6-x86_64
 | {centos} 7 | centos7-x86_64
 
 |===
 
-[NOTE]
-====
-{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {centos} 6 clients using these packages will fail.
+//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
@@ -87,16 +85,15 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel | Client Channel       | Updates/Appstream Channel
-| {centos} 6 | centos6      | centos6-uyuni-client | centos6-updates
 | {centos} 7 | centos7      | centos7-uyuni-client | centos7-updates
 |===
 
-[NOTE]
-====
-{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {centos} 6 clients using these packages will fail.
+//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_novendor_cli_multiarch.adoc[]
 
