--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -10,11 +10,11 @@ You are responsible for arranging access to {centos} base media repositories and
 ====
 
 
-[NOTE]
-====
-Registering {centos} clients to {productname} is tested with the default SELinux configuration of ``enforcing`` with a ``targeted`` policy.
-You do not need to disable SELinux to register {centos} clients to {productname}.
-====
+//[NOTE]
+//====
+//Registering {centos} clients to {productname} is tested with the default SELinux configuration of ``enforcing`` with a ``targeted`` policy.
+//You do not need to disable SELinux to register {centos} clients to {productname}.
+//====
 
 
 
@@ -38,17 +38,16 @@ For example, when working with `x86_64` architecture, you need this products:
 |===
 
 | OS Version | Product Name
-| {centos} 6 | CentOS 6 x86_64
 | {centos} 7 | CentOS 7 x86_64
 
 |===
 
-[NOTE]
-====
-{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {centos} 6 clients using these packages will fail.
+//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -61,17 +60,16 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {centos} 6 | centos6-x86_64
 | {centos} 7 | centos7-x86_64
 
 |===
 
-[NOTE]
-====
-{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {centos} 6 clients using these packages will fail.
+//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
@@ -86,16 +84,15 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel | Client Channel       | Updates/Appstream Channel
-| {centos} 6 | centos6      | centos6-uyuni-client | centos6-updates
 | {centos} 7 | centos7      | centos7-uyuni-client | centos7-updates
 |===
 
-[NOTE]
-====
-{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {centos} 6 clients using these packages will fail.
+//If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_novendor_cli_multiarch.adoc[]
 
