iBackport43. Remove leftover Oracle 6 references.

--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -39,17 +39,16 @@ For example, when working with `x86_64` architecture, you need this products:
 |===
 
 | OS Version | Product Name
-| {oracle} 6 | Oracle Linux 6 x86_64
 | {oracle} 7 | Oracle Linux 7 x86_64
 | {oracle} 8 | Oracle Linux 8 x86_64
 |===
 
-[NOTE]
-====
-{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {oracle} 6 clients using these packages will fail.
+//If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -62,17 +61,16 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {oracle} 6 | oraclelinux6-x86_64
 | {oracle} 7 | oraclelinux7-x86_64
 | {oracle} 8 | oraclelinux8-x86_64
 |===
 
-[NOTE]
-====
-{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {oracle} 6 clients using these packages will fail.
+//If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
@@ -92,11 +90,6 @@ The channels you need for this procedure are:
 | Client Channel
 | Updates Channel
 
-| {oracle} 6
-| oraclelinux6
-| oraclelinux6-uyuni-client
-| -
-
 | {oracle} 7
 | oraclelinux7
 | oraclelinux7-uyuni-client
@@ -109,12 +102,12 @@ The channels you need for this procedure are:
 
 |===
 
-[NOTE]
-====
-{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {oracle} 6 clients using these packages will fail.
+//If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -195,7 +188,7 @@ For Oracle 8 clients use
 ol8-gpg-pubkey-82562EA9AD986DA3.key
 ----
 
-For Oracle 6 or 7 clients use 
+For Oracle 7 clients use 
 ----
 ol67-gpg-pubkey-72F97B74EC551F0A3.key
 ----
