--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -185,7 +185,7 @@ For Oracle 9 and Oracle 8 clients use
 ol8-gpg-pubkey-82562EA9AD986DA3.key
 ----
 
-For Oracle 6 or 7 clients use
+For Oracle 7 clients use
 ----
 ol67-gpg-pubkey-72F97B74EC551F0A3.key
 ----
