--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -38,15 +38,14 @@ For example, when working with `x86_64` architecture, you need this products:
 | {oracle} 9 | Oracle Linux 9 x86_64
 | {oracle} 8 | Oracle Linux 8 x86_64
 | {oracle} 7 | Oracle Linux 7 x86_64
-| {oracle} 6 | Oracle Linux 6 x86_64
 |===
 
-[NOTE]
-====
-{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {oracle} 6 clients using these packages will fail.
+//If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -62,15 +61,14 @@ The channels you need for this procedure are:
 | {oracle} 9 | oraclelinux9-x86_64
 | {oracle} 8 | oraclelinux8-x86_64
 | {oracle} 7 | oraclelinux7-x86_64
-| {oracle} 6 | oraclelinux6-x86_64
 |===
 
-[NOTE]
-====
-{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {oracle} 6 clients using these packages will fail.
+//If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
@@ -105,19 +103,14 @@ The channels you need for this procedure are:
 | oraclelinux7-uyuni-client
 | -
 
-| {oracle} 6
-| oraclelinux6
-| oraclelinux6-uyuni-client
-| -
-
 |===
 
-[NOTE]
-====
-{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {oracle} 6 clients using these packages will fail.
+//If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -192,7 +185,7 @@ For Oracle 9 and Oracle 8 clients use
 ol8-gpg-pubkey-82562EA9AD986DA3.key
 ----
 
-For Oracle 6 or 7 clients use
+For Oracle 7 clients use
 ----
 ol67-gpg-pubkey-72F97B74EC551F0A3.key
 ----
