Missing Oracle 9 info added.

--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -180,12 +180,12 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 [NOTE]
 ====
-For Oracle 9 and Oracle 8 clients use
+For {oracle} 9 and {oracle} 8 clients use
 ----
 ol8-gpg-pubkey-82562EA9AD986DA3.key
 ----
 
-For Oracle 7 clients use
+For {oracle} 7 clients use
 ----
 ol67-gpg-pubkey-72F97B74EC551F0A3.key
 ----
@@ -199,8 +199,8 @@ ol67-gpg-pubkey-72F97B74EC551F0A3.key
 For more information, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {oracle}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[WARNING]
+//====
+//To register and use {oracle}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
