--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -103,6 +103,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {oracle} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {oracle} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -235,6 +240,11 @@ ifeval::[{uyuni-content} == true]
 
 | {debian} 10
 | {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
