Backport43. Missing Oracle 9 and some extra fixes info added.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -117,6 +117,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {oracle} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {oracle} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -247,6 +252,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
+| {oracle} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
 
 | {oracle} 8
 | {x86_64}, {aarch64}
