--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -39,8 +39,9 @@ For example, when working with `x86_64` architecture, you need this products:
 |===
 
 | OS Version | Product Name
-| {oracle} 7 | Oracle Linux 7 x86_64
+| {oracle} 9 | Oracle Linux 9 x86_64
 | {oracle} 8 | Oracle Linux 8 x86_64
+| {oracle} 7 | Oracle Linux 7 x86_64
 |===
 
 //[NOTE]
@@ -61,8 +62,9 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {oracle} 7 | oraclelinux7-x86_64
+| {oracle} 9 | oraclelinux9-x86_64
 | {oracle} 8 | oraclelinux8-x86_64
+| {oracle} 7 | oraclelinux7-x86_64
 |===
 
 //[NOTE]
@@ -90,15 +92,20 @@ The channels you need for this procedure are:
 | Client Channel
 | Updates Channel
 
-| {oracle} 7
-| oraclelinux7
-| oraclelinux7-uyuni-client
-| -
+| {oracle} 9
+| oraclelinux9
+| oraclelinux9-uyuni-client
+| oraclelinux9-appstream
 
 | {oracle} 8
 | oraclelinux8
 | oraclelinux8-uyuni-client
 | oraclelinux8-appstream
+
+| {oracle} 7
+| oraclelinux7
+| oraclelinux7-uyuni-client
+| -
 
 |===
 
@@ -121,7 +128,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-For {oracle} 8 clients, add both the Base and AppStream channels.
+For {oracle} 9 and {oracle} 8 clients, add both the Base and AppStream channels.
 You require packages from both channels.
 If you do not add both channels, you cannot create the bootstrap repository, due to missing packages.
 ====
@@ -183,12 +190,12 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 [NOTE]
 ====
-For Oracle 8 clients use 
+For {oracle} 9 and {oracle} 8 clients use 
 ----
 ol8-gpg-pubkey-82562EA9AD986DA3.key
 ----
 
-For Oracle 7 clients use 
+For {oracle} 7 clients use 
 ----
 ol67-gpg-pubkey-72F97B74EC551F0A3.key
 ----
@@ -202,8 +209,8 @@ ol67-gpg-pubkey-72F97B74EC551F0A3.key
 For more information, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {oracle}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
-====
+//[WARNING]
+//====
+//To register and use {oracle}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+//====
