--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -19,7 +19,7 @@ If you do not do this, you might be violating your terms with {redhat}.
 
 [NOTE]
 ====
-Traditional clients are available on {rhel}{nbsp}6 and 7 only.
+Traditional clients are available on {rhel}{nbsp} 7 only.
 {rhel}{nbsp}8 clients are supported as Salt clients.
 ====
 
@@ -159,17 +159,16 @@ The products you need for this procedure are:
 |===
 
 | OS Version | Product Name
-| {redhat} 6 | RHEL6 Base x86_64
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
 |===
 
-[NOTE]
-====
-{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {redhat} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -191,11 +190,6 @@ The channels you need for this procedure are:
 | Client Channel
 | Tools Channel
 
-| {redhat} 6
-| rhel-x86_64-server-6
-| -
-| res6-suse-manager-tools-x86_64
-
 | {redhat} 7
 | rhel-x86_64-server-7
 | -
@@ -208,12 +202,12 @@ The channels you need for this procedure are:
 
 |===
 
-[NOTE]
-====
-{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {redhat} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -315,17 +309,16 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Product          | Base Channel
-| {redhat} 6 | RHEL6 Base x86_64 | rhel6-pool-x86_64
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
 |===
 
-[NOTE]
-====
-{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
-====
+//[NOTE]
+//====
+//{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {redhat} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+//====
 
 include::snippets/manual_channels.adoc[]
 
@@ -480,8 +473,8 @@ mgr-create-bootstrap-repo
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
-====
+//[WARNING]
+//====
+//To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+//====
