--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -74,11 +74,12 @@ cp /etc/pki/rhui/content-<version>.key /<example>/entitlement/
 Azure:
 +
 * Check the certificate chain using the command:
++
 ----
 openssl s_client -connect rhui-1.microsoft.com:443 -showcerts
 ----
 +
-A sample output will look like the following:
+* A sample output will look like the following:
 +
 ----
 CONNECTED(00000003)
@@ -116,7 +117,7 @@ cp /etc/pki/rhui/cdn.redhat.com-chain.crt /<example>/entitlement
 +
 Azure:
 +
-Upload the converted certifcate to /<example>/entitlement
+* Upload the converted certifcate to /<example>/entitlement
 +
 Google Cloud Platform:
 +
