--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -4,7 +4,7 @@
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
 This section contains information about using {redhat} update infrastructure (RHUI) to register traditional and Salt clients running {rhel} operating systems.
 
-Traditional clients are available on {rhel}{nbsp}6 and 7 only.
+Traditional clients are available on {rhel}{nbsp}7 only.
 {rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
 
 If you are running your clients in a public cloud, such as Amazon EC2, use this method.
@@ -178,18 +178,17 @@ The products you need for this procedure are:
 |===
 
 | OS Version | Product Name
-| {redhat} 6 | RHEL6 Base x86_64
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
 | {redhat} 9 | RHEL 9 Base
 |===
 
-[NOTE]
-====
-{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {redhat} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -210,11 +209,6 @@ The channels you need for this procedure are:
 | Client Channel
 | Tools Channel
 
-| {redhat} 6
-| rhel-x86_64-server-6
-| -
-| res6-suse-manager-tools-x86_64
-
 | {redhat} 7
 | rhel-x86_64-server-7
 | -
@@ -232,12 +226,12 @@ The channels you need for this procedure are:
 
 |===
 
-[NOTE]
-====
-{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {redhat} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -335,18 +329,17 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Product          | Base Channel
-| {redhat} 6 | RHEL6 Base x86_64 | rhel6-pool-x86_64
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
 | {redhat} 9 | RHEL 9 Base           | rhel9-pool-x86_64
 |===
 
-[NOTE]
-====
-{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
-Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[NOTE]
+//====
+//{redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
+//Bootstrapping new {redhat} 6 clients using these packages will fail.
+//If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
 
 include::snippets/manual_channels.adoc[]
 
@@ -419,8 +412,8 @@ mgr-create-bootstrap-repo
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
 
 
-[WARNING]
-====
-To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
-====
+//[WARNING]
+//====
+//To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
+//For more information, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-intro.adoc[Troubleshooting].
+//====
