--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -38,6 +38,20 @@ If you register openSUSE Leap 15 or SLE 15 systems using Python 2, the bootst
 
 
 
+== mgr-bootstrap
+
+The mgr-bootstrap command is a helpful CLI tool that generates custom bootstrap scripts to be used by SUSE Manager client systems for the purpose of simplifying their initial configuration.
+
+The arguments --activation-keys= and --script=, are typically the only mandatory arguments.
+
+mgr-bootstrap --activation-key=<ACTIVATION_KEYS> --script=bootstrap-<EDITED NAME>.sh
+
+The mgr-bootstrap tool includes several other options, including the ability to set a specific hostname, set specific gpg keys, and set the registration method (traditional, salt-minion, salt-bundle).
+
+For a more detailed view of available options, see "man mgr-bootstrap", or run "mgr-bootstrap --help".
+
+
+
 == Create a Bootstrap Script from {webui}
 
 You can use the {productname} {webui} to create an editable bootstrap script.
