--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -40,7 +40,8 @@ If you register openSUSE Leap 15 or SLE 15 systems using Python 2, the bootst
 
 == mgr-bootstrap
 
-The mgr-bootstrap command is a helpful CLI tool that generates custom bootstrap scripts to be used by SUSE Manager client systems for the purpose of simplifying their initial configuration.
+The [command]``mgr-bootstrap`` command generates custom bootstrap scripts.
+Such a script is used by {productname} client systems for the purpose of simplifying their initial configuration.
 
 The arguments --activation-keys= and --script=, are typically the only mandatory arguments.
 
