cosmetic and add comment

--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -57,6 +57,7 @@ For a more detailed view of available options, see "man mgr-bootstrap", or run "
 
 You can use the {productname} {webui} to create an editable bootstrap script.
 
+// 2022-10-26, ke: In step 2, check whether we can use {productname} macro.
 .Procedure: Creating a Bootstrap Script
 . In the {productname} {webui}, navigate to menu:Admin[Manager Configuration > Bootstrap Script].
 . In the [guimenu]``SUSE Manager Configuration - Bootstrap`` dialog, uncheck the [guimenu]``Bootstrap using Salt`` checkbox if you are installing a traditional client.
@@ -66,7 +67,7 @@ You can use the {productname} {webui} to create an editable bootstrap script.
 . Click btn:[Update] to create the script.
 . The bootstrap script is generated and stored on the server in the [path]``/srv/www/htdocs/pub/bootstrap`` directory.
     Alternatively, you can access the bootstrap script over HTTPS.
-    Replace ``example.com`` with the host name of your {productname} Server:
+    Replace [literal]``<example.com>`` with the host name of your {productname} Server:
 ----
 https://<example.com>/pub/bootstrap/bootstrap.sh
 ----
